--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* ----------------------------------
 
-Template Name: Tekni - IT Solutions & Services Template
-Author: validtheme
+Template Name: Solid Thinkers - Innovation Starts Here
+Author: solidthinkers
 Description:
 Version: 1.2
 
@@ -99,7 +99,7 @@ Sidebar heading:  20px 'Outfit', sans-serif
 	--dark: #0e2769;
 	--dark-secondary: #1e3373;
 	--white: #ffffff;
-	--color-primary: #1351d8;
+	--color-primary: #000080;
 	--color-secondary: #9c00ff;
 	--color-style-two: #B700C4;
 	--color-style-three: #FF9B0D;
