--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /* ----------------------------------
 
-Template Name: Tekni - IT Solutions & Services Template
-Author: validtheme
+Template Name: Solid Thinkers - Innovation Starts Here
+Author: solidthinkers
 Description:
 Version: 1.2
 
 Main Font    : Outfit
-Main Color   : #DF0A0A
+Main Color   : #000080
 
 -------------------------------------
 
